# appearance-preference-analyzer

./: .gitignore  README.md  main.py  pyproject.toml
src/: ImagePreprocessor.py
