[project]
name = "mainproject2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pathlib>=1.0.1",
    "sam-2",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2", rev = "2b90b9f5ceec907a1c18123530e92e794ad901a4" }
