[project]
name = "mainproject2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=40.8.0",
    "torch>=2.5.1",
    "torchvision>=0.19.0",
    "transformers>=4.44.0",
    "groundingdino",
    "supervision>=0.22.0",
    "sam-2",
    "numpy<2.0.0", # Важно для GroundingDINO
    "opencv-python",
    "timm",
    "loguru >= 0.7.3"
]

[tool.uv]
override-dependencies = [
    "supervision>=0.22.0",
    "torch>=2.5.1"
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
sam-2 = { git = "https://github.com/facebookresearch/sam2", rev = "2b90b9f5ceec907a1c18123530e92e794ad901a4" }
groundingdino = { git = "https://github.com/idea-research/groundingdino" }